--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [ruby-head, '3.3', '3.2', '3.1']
+        ruby: [ruby-head, '3.3', '3.2']
         pg: [12-master, 13-master, 14-master, 15-master, 16-master]
     steps:
       - name: Set Up Actions
